--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,116 @@
 body{
-   /* Set line spacing */
+    line-height: 2;
 }
-
 
 header, nav{
-    /* Set padding and margin */
-
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 15px;
+    text-align: center;
 }
-nav ul li{
-    /* Set display, margin, padding, font-size, background-color */
 
+
+nav ul li{
+    padding: 15px;
+    background-color:burlywood;
+    font-size: 120%;
+    margin: 10px;
+    display: inline;
 }
 
 nav a{
-    /* Set text decoration*/
+    text-decoration: none;
 }
 
 a:visited{
-    /* Set color */
-
+    color: black;
 }
 
 nav a.current{
     /* Set text decoration, transformation, and underline properties */
+    text-decoration-line:  underline;
+    text-decoration-style: wavy;
+    /* text-decoration: wavy; */
+    text-transform: uppercase;
 }
 
-
 h1{
-   /*Set font and font size*/
-
+    font-size: 500%;
+    font-family: 'Merriweather', 'Anton', 'Times New Roman', 'Courier New';
+    text-align: left;
 }
 
 h2{
-    /*Set font, font size, and alignment*/
+    font-size: 280%;
+    font-family: 'Anton', 'Times New Roman', 'Courier New';
+    text-align: center;
 }
 
 h3{
-    /*Set font size*/
-
+    font-size: 190%;
 }
+
 
 h1, h2, h3{
-    /*Set margin */
-
+    margin-top: 10px;
 }
+
 .grid{
     /*Set width, margin, border properties, background color, and grid properties */
+    width: 90%;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;    
+    justify-content: space-between;
+    align-content: center;
+    border-radius: 1.5em;
+    column-gap: 50px;
+    row-gap: 10px;
+    background-color: rgb(136, 189, 235);
+    margin: auto;
+    
 }
 
 .grid div{
     /* Set border properties, padding, and background color */
-
+    border: 2px solid rgb(66, 66, 66);
+    border-radius: 1.5em;
+    background-color: rgb(225, 244, 244);
+    padding: 30px;
 }
 
 .grid img{
     /* Set width, margin, and display */
+    width: 90%;
+    margin: 20px 10px 10px 10px;
 }
 
 
 .grid div:nth-child(3n+1)  {
     /* Set box shadow */
+    box-shadow: 10px 0px rgba(140, 150, 192, 0.5);
     }
 
 .grid div:nth-child(3n)  {
     /* Set box shadow */ 
+    box-shadow: -10px 0px rgba(140, 150, 192, 0.5);
 }
 
 .grid div:nth-child(3n+2)  {
      /* Set box shadow */
+     box-shadow: 0px 10px 0px 10px rgba(140, 150, 192, 0.5);
 }
     
 
 p + p {
      /* Set indentation */
+     text-indent: 20px;
   }
   
 p{
      /* Set margin */
+     margin: 10px;
 }
 
 
